--- a/index.html
+++ b/index.html
@@ -3,14 +3,14 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Image to Text Extractor</title>
+  <title>PDF to Text Extractor</title>
   <link rel="stylesheet" href="styles.css">
 </head>
 <body>
   <div class="container">
-    <h1>Image to Text Extractor</h1>
-    <p>Upload an image and extract the text using OCR.</p>
-    <input type="file" id="imageUpload" accept="image/*">
+    <h1>PDF to Text Extractor</h1>
+    <p>Upload a PDF (image-based or text-based) to extract text from it.</p>
+    <input type="file" id="pdfUpload" accept="application/pdf">
     <button id="extractText">Extract Text</button>
     <div id="loader" style="display: none;">Processing...</div>
     <div id="output">
@@ -18,6 +18,7 @@
       <p id="textResult"></p>
     </div>
   </div>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/pdf.js/2.14.305/pdf.min.js"></script>
   <script src="https://cdn.jsdelivr.net/npm/tesseract.js@v4.0.2/dist/tesseract.min.js"></script>
   <script src="script.js"></script>
 </body>
