--- a/index.html
+++ b/index.html
@@ -17,10 +17,11 @@
       <h2>Extracted Text:</h2>
       <p id="textResult"></p>
     </div>
-    <button id="generateMCQs" style="display: none;">Generate MCQs</button>
+    <button id="generateMCQs" style="display: none;">Generate Question</button>
     <div id="mcqContainer" style="display: none;">
-      <h2>Generated MCQs:</h2>
-      <p id="mcqResult"></p>
+      <h2>Generated Question:</h2>
+      <div id="mcqResult"></div>
+      <button id="nextQuestion" style="display: none;">Next Question</button>
     </div>
   </div>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/pdf.js/2.14.305/pdf.min.js"></script>
